--- a/styles/style_senioren_devinken3.css
+++ b/styles/style_senioren_devinken3.css
@@ -121,14 +121,14 @@ img {
 /* Carousel header: 
 
 Opmaak en positioneren buttons*/
-header section:nth-of-type(1) {
+header section:first-of-type {
 	position: relative;
 	padding: 0;
 
 }
 
 /* Opmaak button in header */
-header section:nth-of-type(1) button {
+header section:first-of-type button {
 	position: absolute;
 	appearance: none;
 	border: none;
@@ -136,14 +136,14 @@ header section:nth-of-type(1) button {
 }
 
 /* Button header links */
-header section:nth-of-type(1) button:nth-of-type(1) {
+header section:first-of-type button:first-of-type {
 	left: 0;
 	top: 50%;
 	transform: translateX(1em) rotate(0deg);
 }
 
 /* Button header rechts */
-header section:nth-of-type(1) button:nth-of-type(2) {
+header section:first-of-type button:nth-of-type(2) {
 	right: 0;
 	top: 50%;
 	transform: translateX(-1em) rotate(180deg);
@@ -159,7 +159,7 @@ header section:first-of-type button div {
 }
 
 /* Eerste button nav carousel */
-header section:nth-of-type(1) button:nth-of-type(3) {
+header section:first-of-type button:nth-of-type(3) {
 	width: 1.5em;
 	height: 1.5em;
 	border-radius: .5em;
@@ -171,7 +171,7 @@ header section:nth-of-type(1) button:nth-of-type(3) {
 }
 
 /* Tweede button nav carousel */
-header section:nth-of-type(1) button:nth-of-type(4) {
+header section:first-of-type button:nth-of-type(4) {
 	width: 1.5em;
 	height: 1.5em;
 	border-radius: .5em;
@@ -183,7 +183,7 @@ header section:nth-of-type(1) button:nth-of-type(4) {
 }
 
 /* Derde button nav carousel */
-header section:nth-of-type(1) button:nth-of-type(5) {
+header section:first-of-type button:nth-of-type(5) {
 	width: 1.5em;
 	height: 1.5em;
 	border-radius: .5em;
@@ -195,7 +195,7 @@ header section:nth-of-type(1) button:nth-of-type(5) {
 }
 
 /* Vierde button nav carousel */
-header section:nth-of-type(1) button:nth-of-type(6) {
+header section:first-of-type button:nth-of-type(6) {
 	width: 1.5em;
 	height: 1.5em;
 	border-radius: .5em;
@@ -208,7 +208,7 @@ header section:nth-of-type(1) button:nth-of-type(6) {
 
 /* Carousel header: 
 opmaak foto's en overflow */
-header > section:nth-of-type(1) > ul {
+header > section:first-of-type > ul {
 	display: flex;
 	overflow-x: auto;
 	scroll-snap-type: x mandatory;
@@ -226,7 +226,7 @@ header section ul::-webkit-scrollbar {
 }
 
 /* Om te zorgen dat foto's altijd volledig op de pagina staan */
-header > section:nth-of-type(1) > ul > li {
+header > section:first-of-type > ul > li {
 	/*als flex kind*/
 	flex-shrink: 0;
 	flex-basis: 100%;
@@ -543,6 +543,7 @@ main > section:nth-of-type(2) > ul > li > ul li:nth-child(2n + 1) {
 main > section:nth-of-type(2) > ul > li > ul > li img{
 	width:0.75em;
 }
+
 /* Poulestanden */
 main > section:nth-of-type(3){
 	grid-column: 1;
@@ -559,17 +560,17 @@ main > section:nth-of-type(3) > ul {
 main > section:nth-of-type(3) > ul > li > ul{
 	padding:0;
 }
-main>section:nth-of-type(3)>ul>li>ul li:nth-child(2n) {
+main>section:nth-of-type(3) > ul > li > ul li:nth-child(2n) {
 	background-color: var(--color-tabel-achtergrondLicht);
 	color: var(--color-text);
 }
 
-main>section:nth-of-type(3)>ul>li>ul li:nth-child(2n + 1) {
+main>section:nth-of-type(3) > ul > li > ul li:nth-child(2n + 1) {
 	background-color: var(--color-tabel-achtergrondDonker);
 	color: var(--color-text);
 }
 
-main>section:nth-of-type(3)>ul>li>ul li:first-of-type {
+main>section:nth-of-type(3) > ul > li > ul li:first-of-type {
 	background-color: var(--color-tabel-achtergrondHeading);
 	color: var(--color-text);
 	font-weight: 700;
@@ -635,7 +636,7 @@ main > section:nth-of-type(5) > ul > li > a {
 	grid-template-rows: repeat(3, 3.7em);
 	column-gap: 1em;
 }
-main section:nth-of-type(5) p:nth-of-type(1){
+main section:nth-of-type(5) p:first-of-type{
 	grid-column-start: 2;
 	grid-column-end: 2;
 	grid-row-start: 2;
@@ -709,7 +710,7 @@ main > section:nth-of-type(6) > ul > li > ul > li{
 	padding: 2%;
 } 
 
-main>section:nth-of-type(6)>ul>li>ul li:first-of-type {
+main>section:nth-of-type(6) > ul > li > ul li:first-of-type {
 	background-color: var(--color-tabel-achtergrondHeading);
 	color: var(--color-text);
 	font-weight: 700;
@@ -721,7 +722,7 @@ main > section:nth-of-type(6) > ul > li > ul li:nth-child(2n) {
 	color: var(--color-text);
 }
 
-main>section:nth-of-type(6)>ul>li>ul li:nth-child(2n + 1) {
+main>section:nth-of-type(6) > ul > li > ul li:nth-child(2n + 1) {
 	background-color: var(--color-tabel-achtergrondDonker);
 	color: var(--color-text);
 }
@@ -759,47 +760,47 @@ main section:nth-of-type(7) p {
 }
 
 /* Positie kopje volgende wedstrijd */
-main section:nth-of-type(7)>p:nth-of-type(1) {
+main section:nth-of-type(7) > p:first-of-type {
 	order: 2;
 }
 /* Positie kopje competitie*/
-main section:nth-of-type(7)>p:nth-of-type(2) {
+main section:nth-of-type(7) > p:nth-of-type(2) {
 	order: 3;
 }
 
 /* Opmaak en positie naam team 2 */
-main section:nth-of-type(7)>p:nth-of-type(3) {
+main section:nth-of-type(7) > p:nth-of-type(3) {
 	order: 5;
 	background-color: var(--color-tabel-achtergrondDonker);
 }
 
 /* Opmaak en positie VS */
-main section:nth-of-type(7)>p:nth-of-type(4) {
+main section:nth-of-type(7) > p:nth-of-type(4) {
 	order: 6;
 	background-color: var(--color-tabel-achtergrondDonker);
 }
 
 /* Opmaak en positie naam team 2 */
-main section:nth-of-type(7)>p:nth-of-type(5) {
+main section:nth-of-type(7) > p:nth-of-type(5) {
 	order: 7;
 	background-color: var(--color-tabel-achtergrondDonker);
 }
 
 /* Opmaak en positie datum */
-main section:nth-of-type(7)>p:nth-of-type(6) {
+main section:nth-of-type(7) > p:nth-of-type(6) {
 	order: 9;
 	border-top: solid;
 	border-color: var(--color-border);
 }
 
 /* Opmaak en positie locatie */
-main section:nth-of-type(7)>p:nth-of-type(7) {
+main section:nth-of-type(7) > p:nth-of-type(7) {
 	order: 10;
 	border-bottom: solid;
 	border-color: var(--color-border);
 }
 /* Grootte en positie afbeelding tegenstander */
-main section:nth-of-type(7) img:nth-of-type(1) {
+main section:nth-of-type(7) img:first-of-type {
 	order: 4;
 	width:10%;
 	margin: 0.5em;
@@ -834,12 +835,14 @@ main section:nth-of-type(7) a {
 	margin-bottom: 1em;
 }
 
+/* Statestieken */
 main section:nth-of-type(8){
 	grid-column: 1;
 	grid-row-start: 19;
 	grid-row-end: 23;
 }
 
+/* Ook lidworden */
 main > a:first-of-type > h2{
 	color: var(--color-text-heading);
 	background-color: var(--color-donkerblauw);
@@ -851,6 +854,7 @@ main > a:first-of-type > h2{
 	grid-row-start: 1;
 	grid-row-end: 2;
 }
+
 
 /* Eerst volgende wedstrijd de vinken 1*/
 main section:nth-of-type(9){
@@ -884,29 +888,29 @@ main section:nth-of-type(9) p {
 }
 
 /* Positie kopje volgende wedstrijd */
-main section:nth-of-type(9)>p:nth-of-type(1) {
+main section:nth-of-type(9) > p:first-of-type {
 	order: 2;
 }
 
 /* Positie kopje competitie*/
-main section:nth-of-type(9)>p:nth-of-type(2) {
+main section:nth-of-type(9) > p:nth-of-type(2) {
 	order: 3;
 }
 
 /* Opmaak en positie naam team 2 */
-main section:nth-of-type(9)>p:nth-of-type(3) {
+main section:nth-of-type(9) > p:nth-of-type(3) {
 	order: 5;
 	background-color: var(--color-tabel-achtergrondDonker);
 }
 
 /* Opmaak en positie VS */
-main section:nth-of-type(9)>p:nth-of-type(4) {
+main section:nth-of-type(9) > p:nth-of-type(4) {
 	order: 6;
 	background-color: var(--color-tabel-achtergrondDonker);
 }
 
 /* Opmaak en positie naam team 2 */
-main section:nth-of-type(9)>p:nth-of-type(5) {
+main section:nth-of-type(9) > p:nth-of-type(5) {
 	order: 7;
 	background-color: var(--color-tabel-achtergrondDonker);
 }
@@ -926,7 +930,7 @@ main section:nth-of-type(9)>p:nth-of-type(7) {
 }
 
 /* Grootte en positie afbeelding tegenstander */
-main section:nth-of-type(9) img:nth-of-type(1) {
+main section:nth-of-type(9) img:first-of-type {
 	order: 4;
 	width:10%;
 	margin: 0.5em;
@@ -965,7 +969,9 @@ main section:nth-of-type(9) a {
 	margin-bottom: 1em;
 }
 
-/*agenda komende twee weken*/
+
+
+/*Agenda komende twee weken*/
 
 main > section:nth-of-type(10){
 	/* plaats op main grid grootscherm*/
@@ -999,18 +1005,18 @@ main > section:nth-of-type(10) > ul > li > h3 {
 	color: var(--color-text);
 }
 
-main>section:nth-of-type(10)>ul>li p {
+main > section:nth-of-type(10) > ul > li p {
 	color: var(--color-text);
 }
 
-main>section:nth-of-type(10)>ul>li>p:nth-of-type(1) {
+main > section:nth-of-type(10) > ul> li > p:first-of-type {
 	grid-column-start: 3;
 	grid-column-end: 3;
 	grid-row-start: 2;
 	grid-row-end: 2;
 }
 
-main>section:nth-of-type(10)>ul>li>p:nth-of-type(2) {
+main > section:nth-of-type(10) > ul > li > p:nth-of-type(2) {
 	grid-column-start: 1;
 	grid-column-end: 1;
 	grid-row-start: 1;
@@ -1023,7 +1029,7 @@ main>section:nth-of-type(10)>ul>li>p:nth-of-type(2) {
 	padding-top: 1em;
 }
 /* Linear gradient: https://developer.mozilla.org/en-US/docs/Web/CSS/gradient/linear-gradient */
-main>section:nth-of-type(10)>ul>li>p:nth-of-type(3) {
+main > section:nth-of-type(10) > ul > li > p:nth-of-type(3) {
 	grid-column-start: 1;
 	grid-column-end: 1;
 	grid-row-start: 2;
@@ -1071,7 +1077,7 @@ main>section:nth-of-type(11)>ul>li>ul li:nth-child(2n + 1) {
 	color: var(--color-text);
 }
 
-main>section:nth-of-type(11)>ul>li>ul li:first-of-type {
+main > section:nth-of-type(11)>ul > li > ul li:first-of-type {
 	background-color: var(--color-tabel-achtergrondHeading);
 	color: var(--color-text);
 	font-weight: 700;
@@ -1109,7 +1115,7 @@ main > section:nth-of-type(12) > ul > li > a:focus{
 	border-color: var(--color-focus);
 }
 
-main>section:nth-of-type(12) > ul > li > a > img {
+main > section:nth-of-type(12) > ul > li > a > img {
 	/*als flex kind*/
 	grid-column-start: 1;
 	grid-column-end: 1;
@@ -1127,14 +1133,14 @@ main > section:nth-of-type(12) > ul > li > a > h3 {
 	grid-row-end: 1;
 }
 
-main>section:nth-of-type(12)>ul>li>a>p:nth-of-type(1) {
+main > section:nth-of-type(12) > ul > li > a >p:first-of-type {
 	grid-column-start: 2;
 	grid-column-end: 2;
 	grid-row-start: 3;
 	grid-row-end: 3;
 }
 
-main>section:nth-of-type(12)>ul>li>a>p:nth-of-type(2) {
+main > section:nth-of-type(12) > ul > li > a > p:nth-of-type(2) {
 	visibility: visible;
 	grid-column-start: 2;
 	grid-column-end: 2;
