--- a/styles/style.css
+++ b/styles/style.css
@@ -501,7 +501,7 @@ main > ul > li > a > h3 {
 	grid-row-end: 1;
 }
 
-main > ul > li > a > p:nth-of-type(1) {
+main > ul > li > a > p:first-of-type {
 	grid-column-start: 2;
 	grid-column-end: 2;
 	grid-row-start: 2;
@@ -574,7 +574,7 @@ main > section:first-of-type > ul > li > a > h3 {
 	grid-row-end: 1;
 }
 
-main > section:first-of-type > ul > li > a > p:nth-of-type(1) {
+main > section:first-of-type > ul > li > a > p:first-of-type {
 	grid-column-start: 2;
 	grid-column-end: 2;
 	grid-row-start: 2;
@@ -759,7 +759,7 @@ main section:nth-of-type(5) p {
 }
 
 /* Positie kopje volgende wedstrijd */
-main section:nth-of-type(5) > p:nth-of-type(1) {
+main section:nth-of-type(5) > p:first-of-type {
 	order: 2;
 }
 
@@ -802,7 +802,7 @@ main section:nth-of-type(5) > p:nth-of-type(7) {
 }
 
 /* Grootte en positie afbeelding tegenstander */
-main section:nth-of-type(5) img:nth-of-type(1) {
+main section:nth-of-type(5) img:first-of-type {
 	order: 4;
 	width:10%;
 	margin: 0.5em;
@@ -883,7 +883,7 @@ main > section:nth-of-type(6) > ul > li p {
 	color: var(--color-text);
 }
 
-main > section:nth-of-type(6) > ul > li > p:nth-of-type(1) {
+main > section:nth-of-type(6) > ul > li > p:first-of-type {
 	grid-column-start: 3;
 	grid-column-end: 3;
 	grid-row-start: 2;
@@ -1014,14 +1014,14 @@ main > section:nth-of-type(8) > ul > li > a > h3 {
 	grid-row-end: 1;
 }
 
-main > section:nth-of-type(8) > ul > li > a > p:nth-of-type(1) {
+main > section:nth-of-type(8) > ul > li > a > p:first-of-type {
 	grid-column-start: 2;
 	grid-column-end: 2;
 	grid-row-start: 3;
 	grid-row-end: 3;
 }
 
-main>section:nth-of-type(8)>ul>li>a>p:nth-of-type(2) {
+main > section:nth-of-type(8) > ul > li > a > p:nth-of-type(2) {
 	visibility: visible;
 	grid-column-start: 2;
 	grid-column-end: 2;
@@ -1120,7 +1120,7 @@ footer a{
 		grid-row-end: 1;
 	}
 
-	main > ul > li > a > p:nth-of-type(1) {
+	main > ul > li > a > p:first-of-type {
 		grid-column-start: 2;
 		grid-column-end: 2;
 		grid-row-start: 2;
